# winapi-hooking-rust

./: Cargo.toml  README.md
dll/: Cargo.toml
dll/src/: lib.rs
exe/: Cargo.toml
exe/src/: instructions.rs  main.rs  util.rs
src/: Untitled-2.cpp  main.rs
