[package]
name = "rs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = "1.21.0"
windows = { version = "0.59.0", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_DataExchange",
] }
