[package]
name = "rs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_DataExchange",
  "Win32_System_Threading"
] }

[dependencies.iced-x86]
version = "1.21.0"
features = ["code_asm"]